--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
 Changelog
 ==============
 
+0.3.14 (2017-01-25)
+-------------------
+
+- issue #69: added day_or option to change behavior when day-of-month and
+  day-of-week is given
+  [Andreas Vogl <a.vogl@hackner-security.com>]
+
+
+
 0.3.13 (2016-11-01)
 -------------------
 
