--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 Changelog
 ==============
 
+0.3.15 (2017-02-16)
+-------------------
+
+- fix bug around multiple conditions and range_val in
+  _get_prev_nearest_diff.
+  [abeja-yuki@github]
+
 0.3.14 (2017-01-25)
 -------------------
 
