--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 Changelog
 ==============
 
+0.3.16 (2017-03-15)
+-------------------
+
+- Better test suite [mrcrilly@github]
+- DST support [kiorky]
+
 0.3.15 (2017-02-16)
 -------------------
 
