--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 Changelog
 ==============
 
+0.3.17 (2017-05-22)
+-------------------
+- DOW occurence sharp style support.
+  [kiorky, Kengo Seki <sekikn@apache.org>]
+
+
 0.3.16 (2017-03-15)
 -------------------
 
